# LogShifter

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  config.yaml  demo.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  main.yml  release-please.yml
demo/: demo.py  demo_discord.py  demo_github.py  demo_sheets.py  demo_slack.py  demo_telegram.py
docs/: architecture.md  cli.md  index.md
logport/: __init__.py
logport/adapters/: __init__.py  github.py
logport/core/: __init__.py  adapter.py  exceptions.py  manager.py
logport/utils/: __init__.py  config.py
logshift/: __init__.py  cli.py
logshift/adapters/: __init__.py  github.py
logshift/core/: __init__.py  adapter.py  exceptions.py  fetcher.py  manager.py
logshift/utils/: __init__.py  config.py
src/logshift/: __init__.py  cli.py  config.py  core.py
src/logshift/adapters/: __init__.py  base.py  discord.py  github.py  sheets.py  slack.py  telegram.py
src/logshift/core/: __init__.py  adapter.py  exceptions.py  fetcher.py  manager.py
tests/: test_core.py  test_discord_adapter.py  test_github_adapter.py  test_logshift.py  test_sheets_adapter.py  test_slack_adapter.py  test_telegram_adapter.py
