[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logshift"
version = "0.1.0"
description = "A multi-target, modular Log Archiving & Transport SDK"
readme = "README.md"
authors = [
    { name = "Atacan", email = "your_email@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "GitPython>=3.1.0",
    "supabase>=2.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "gspread>=5.10.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
    "ruff>=0.0.200",
    "pre-commit>=3.0.0",
    "mkdocs-click>=0.8.0",
]

[project.scripts]
logshift = "logshift.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["logshift*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = []

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
